finished awards.html - need to check on laptop

--- a/awards-and-honours.html
+++ b/awards-and-honours.html
@@ -91,7 +91,14 @@
       <section>
         <p>
           David Attenborough has been the recipient of many awards for his work
-          as an environmentalist, writer, and broadcaster.
+          as an environmentalist, writer, and broadcaster. Here are some of his
+          most notable awards and honours.
+        </p>
+        <p style="color: rgb(148, 4, 4); font-size: 20px">
+          <em>
+            Hover over an image to see the award name and the year it was
+            awarded.
+          </em>
         </p>
       </section>
       <section id="image-container">
@@ -142,6 +149,40 @@
             <div class="flip-card-back">
               <h1>Kalinga Prize</h1>
               <p>1981</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Royal Victorian Order (RVO) -->
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/Royal-Victorian-Order.jpg"
+                alt=""
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>Royal Victorian Order</h1>
+              <p>1991</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Companion of Honour (CM) -->
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/Companion of Honour (CH).jpg"
+                alt=""
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>Companion of Honour</h1>
+              <p>1996</p>
             </div>
           </div>
         </div>
@@ -216,6 +257,23 @@
           </div>
         </div>
 
+        <!-- Order of Merit (OM) -->
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/order-of-merit.png"
+                alt="An image of the Order of Merit medal."
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>Order of Merit</h1>
+              <p>2005</p>
+            </div>
+          </div>
+        </div>
+
         <!-- Prince of Asturias Award for Social Sciences -->
         <div class="flip-card">
           <div class="flip-card-inner">
@@ -235,21 +293,38 @@
           </div>
         </div>
 
-        <!-- Knight Grand Cross of the Order of St Michael and St George -->
+        <!-- George Foster Peabody Award -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
-                src="images/awards/Knight-of-Grand-Cross.jpg"
-                alt="An image of David Attenborough after being awarded the Knight Grand Cross of the Order of St Michael and St George."
+                src="images/awards/George_Foster_Peabody_Awards.jpg"
+                alt="An image of the George Foster Peabody Award."
                 style="width: 300px; height: 300px"
               />
             </div>
             <div class="flip-card-back">
-              <h1 class="text-spilling-out">
-                Knight Grand Cross of the Order of St Michael and St George
+              <h1>George Foster Peabody Award</h1>
+              <p>2015</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Gold Medal of the Royal Canadian Geographical Society -->
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/Gold Medal of the Royal Canadian Geographical Society.jpg"
+                alt="An image of the Gold Medal of the Royal Canadian Geographical Society."
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1 style="font-size: 20px">
+                Royal Canadian Geographical Society Gold Medal
               </h1>
-              <p>2022</p>
+              <p>2017</p>
             </div>
           </div>
         </div>
@@ -288,25 +363,6 @@
           </div>
         </div>
 
-        <!-- Gold Medal of the Royal Canadian Geographical Society -->
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img
-                src="images/awards/Gold Medal of the Royal Canadian Geographical Society.jpg"
-                alt="An image of the Gold Medal of the Royal Canadian Geographical Society."
-                style="width: 300px; height: 300px"
-              />
-            </div>
-            <div class="flip-card-back">
-              <h1 style="font-size: 20px">
-                Royal Canadian Geographical Society Gold Medal
-              </h1>
-              <p>2017</p>
-            </div>
-          </div>
-        </div>
-
         <!-- Landscape Institute Medal for Lifetime Achievement -->
         <div class="flip-card">
           <div class="flip-card-inner">
@@ -326,70 +382,21 @@
           </div>
         </div>
 
-        <!-- George Foster Peabody Award -->
+        <!-- Knight Grand Cross of the Order of St Michael and St George -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
-                src="images/awards/George_Foster_Peabody_Awards.jpg"
-                alt="An image of the George Foster Peabody Award."
+                src="images/awards/Knight-of-Grand-Cross.jpg"
+                alt="An image of David Attenborough after being awarded the Knight Grand Cross of the Order of St Michael and St George."
                 style="width: 300px; height: 300px"
               />
             </div>
             <div class="flip-card-back">
-              <h1>George Foster Peabody Award</h1>
-              <p>2015</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Order of Merit (OM) -->
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img
-                src="images/awards/order-of-merit.png"
-                alt="An image of the Order of Merit medal."
-                style="width: 300px; height: 300px"
-              />
-            </div>
-            <div class="flip-card-back">
-              <h1>Order of Merit</h1>
-              <p>2005</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Companion of Honour (CM) -->
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img
-                src="images/awards/Companion of Honour (CH).jpg"
-                alt=""
-                style="width: 300px; height: 300px"
-              />
-            </div>
-            <div class="flip-card-back">
-              <h1>Companion of Honour</h1>
-              <p>1996</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Royal Victorian Order (RVO) -->
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img
-                src="images/awards/Royal-Victorian-Order.jpg"
-                alt=""
-                style="width: 300px; height: 300px"
-              />
-            </div>
-            <div class="flip-card-back">
-              <h1>Royal Victorian Order</h1>
-              <p>1991</p>
+              <h1 class="text-spilling-out">
+                Knight Grand Cross of the Order of St Michael and St George
+              </h1>
+              <p>2022</p>
             </div>
           </div>
         </div>
