added quote and fixed spelling issue

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
         <figure>
           <img
             src="images/family-picture-1.jpg"
-            alt="A Picture of David Attenboroguh with his brothers."
+            alt="A Picture of David Attenborough with his brothers."
           />
           <figcaption>
             David Attenborough (center) with his brothers in 1933
@@ -117,7 +117,7 @@
           <blockquote>
             Before the BBC, I joined the Navy in order to travel.
           </blockquote>
-          <figcaption>&mdash; David Attenboroguh</figcaption>
+          <figcaption>&mdash; David Attenborough</figcaption>
         </figure>
         <figure>
           <img
@@ -127,7 +127,7 @@
             height="508.75px"
           />
           <figcaption>
-            David Attenboroguh with his wife and kids in 1957.
+            David Attenborough with his wife and kids in 1957.
           </figcaption>
         </figure>
       </article>
