--- a/awards-and-honours.html
+++ b/awards-and-honours.html
@@ -94,6 +94,16 @@
           as an environmentalist, writer, and broadcaster. Here are some of his
           most notable awards and honours.
         </p>
+        <figure class="quote">
+          <blockquote>
+            Never before have we had such an awareness of what we are doing to
+            the planet, and never before have we had the power to do something
+            about it… Surely we have a responsibility to care for our blue
+            planet. The future of humanity, and indeed all life on Earth, now
+            depends on us.
+          </blockquote>
+          <figcaption>&mdash; David Attenborough.</figcaption>
+        </figure>
         <p style="color: rgb(148, 4, 4); font-size: 20px">
           <em>
             Hover over an image to see the award name and the year it was
