finished writing content on word doc, styling now

--- a/career-and-work.html
+++ b/career-and-work.html
@@ -25,7 +25,52 @@
         </a>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <h1>Career & Work</h1>
+      <hr />
+      <section>
+        <figure class="quote">
+          <blockquote>
+            An understanding of the natural world is a source of not only great
+            curiosity, but great fulfilment.
+          </blockquote>
+          <figcaption>&mdash; David Attenborough</figcaption>
+        </figure>
+        <p>
+          David Attenborough has worked on nature documentaries for more than 50
+          years! His work has had a deep and meaningful impact on the world.
+          He’s known as a British icon for his devotion to showing the public
+          the beauties of the Earth through television.
+        </p>
+        <figure class="quote">
+          <blockquote>
+            I wish the world was twice as big - and half of it was still
+            unexplored.
+          </blockquote>
+          <figcaption>&mdash; David Attenborough</figcaption>
+        </figure>
+      </section>
+      <article>
+        <figure>
+          <img
+            src="images/Attenborough-filming-zoo-quest.jpg"
+            alt="A black-and-white picture of David Attenborough with cameraman Charles Lagus filming Zoo Quest."
+          />
+          <figcaption>
+            David Attenborough with cameraman Charles Lagus filming Zoo Quest.
+          </figcaption>
+        </figure>
+        <p>
+          David Attenborough completed a three-month training course at the
+          British Broadcasting Corporation (BBC), and in 1952, became a
+          television producer working for the BBC. In 1954, his first “hit”
+          educational program, <em>Zoo Quest</em>, was broadcasted. Together
+          with Jack Lester, he would host the show and film live animals in the
+          wild and zoo. The immense popularity of the show led to more
+          educational content being produced by the BBC.
+        </p>
+      </article>
+    </main>
     <footer>
       <hr id="footer-hr" />
       <p id="footer-text">
