added a lot of styling and new sections

--- a/career-and-work.html
+++ b/career-and-work.html
@@ -31,8 +31,15 @@
       <section>
         <figure class="quote">
           <blockquote>
-            An understanding of the natural world is a source of not only great
-            curiosity, but great fulfilment.
+            I can’t pretend that I got involved with filming the natural world
+            fifty years ago because I had some great banner to carry about
+            conservation – not at all, I always had a huge pleasure in just
+            watching the natural world and seeing what happens. But as I went on
+            making them it became more and more apparent that the creatures that
+            were giving me so much joy were under threat. The fun is in
+            delighting in the animals but if you do that you owe them something
+            so you have an obligation to speak out and to do what you can to
+            protect them.
           </blockquote>
           <figcaption>&mdash; David Attenborough</figcaption>
         </figure>
@@ -69,6 +76,72 @@
           wild and zoo. The immense popularity of the show led to more
           educational content being produced by the BBC.
         </p>
+        <p>
+          In March 1965, Attenborough accepted a position as Controller of BBC
+          2. He was responsible for producing shows including
+          <em>The Forsyte Saga</em>, <em>The Ascent of Man</em>,
+          <em>Civilisation</em>, and Monty Python’s <em>Flying Circus</em>. He
+          was also one of the first people to introduce colour television to the
+          BBC. During this time, David Attenborough also filmed a cultural
+          history film, <em>A Blank on the Map</em>.
+        </p>
+        <figure class="quote">
+          <blockquote>
+            An understanding of the natural world is a source of not only great
+            curiosity, but great fulfilment.
+          </blockquote>
+          <figcaption>&mdash; David Attenborough</figcaption>
+        </figure>
+        <p>
+          In 1972, David Attenborough resigned from his position and pursued
+          writing and producing educational content as a freelancer. In 1979,
+          his most remarkable series, <em>The Life Series</em>, was broadcasted
+          starting with the first episode, <em>Life on Earth</em>. Eight more
+          episodes would be released over the next few decades. This series
+          cemented David Attenborough’s reputation as a
+          <strong>leading television naturalist</strong> and an
+          <strong>iconic figure</strong> in British cultural life.
+        </p>
+        <figure>
+          <img
+            src="images/Life-on-Earth-filming.jpg"
+            alt="A black-and-white image of David Attenborough visiting the Kaieteur Falls in Guyana during filming of Life on Earth."
+            width="960px"
+            height="540px"
+          />
+          <figcaption>
+            David Attenborough visiting the Kaieteur Falls in Guyana while
+            filming Life on Earth.
+          </figcaption>
+        </figure>
+        <div style="text-align: center">
+          <iframe
+            width="840"
+            height="472.5"
+            src="https://www.youtube.com/embed/czgc56Vfz4w"
+            title="A video by BBC Studios giving a brief overview about David Attenborough's Life Series."
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <p>
+          Another popular project that David Attenborough worked on was
+          narrating the <em>Wildlife on One</em> program for 28 years! It
+          attracted around 8 &mdash; 10 million viewers every week, and one of
+          its episodes was voted the best wildlife documentary of all time on
+          the BBC channel.
+        </p>
+        <figure class="quote">
+          <blockquote>
+            Since I started filming in the 1950s, on average, wild animal
+            populations have more than halved. I look at these images now and I
+            realize that, although as a young man I felt I was out there in the
+            wild experiencing the untouched natural world… it was an illusion.
+            Those forests and plains and seas were already emptying.
+          </blockquote>
+          <figcaption>&mdash; David Attenborough</figcaption>
+        </figure>
       </article>
     </main>
     <footer>
