--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!--
     Name: Hamza Haque
-    Course: Software Development 20S
-    Teacher: Scott Hardman
-    School: Pembina Trails Early College
-    Date Last Modified: June 2, 2022
+    Course: Science Honours 20FH
+    School: Fort Richmond Collegiate
+    Date Last Modified: June 12, 2022
 -->
 
 <!DOCTYPE html>
