--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     Course: Science Honours 20FH
     School: Fort Richmond Collegiate
     Date Last Modified: June 12, 2022
+
+    This is for a science project.
 -->
 
 <!DOCTYPE html>
